--- a/index.html
+++ b/index.html
@@ -5,25 +5,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com" defer></script>
+  <script src="src/scripts/app.js" type="module" defer></script>
   <link href="/src/style.css" rel="stylesheet">
 </head>
 <body class="h-full">
-  <div class="flex h-full">
-    <div class="w-1/4 bg-gray-100 p-4 border-r border-gray-300">
-      <h2 class="text-xl font-bold mb-4">Sidebar</h2>
-      <ul>
-        <li class="mb-2"><a href="#" class="text-blue-500 hover:underline">Home</a></li>
-        <li class="mb-2"><a href="#" class="text-blue-500 hover:underline">About</a></li>
-        <li class="mb-2"><a href="#" class="text-blue-500 hover:underline">Services</a></li>
-        <li class="mb-2"><a href="#" class="text-blue-500 hover:underline">Contact</a></li>
-      </ul>
+  <header class="bg-indigo-950 h-12 flex items-center px-3">
+    <i class="fa fa-amazon text-4xl text-white"></i>
+    <h1 class="text-2xl font-bold text-white ml-2">Amazon</h1>
+    <div class="ml-auto flex items-center">
+      <i class="fa fa-shopping-cart text-2xl text-white"></i>
+      <span class="ml-2 text-gray-200" id="cart-count">0 items</span>
+      <span class="ml-2 text-gray-200" id="cart-total">$0.00</span>
     </div>
-    <div class="w-3/4 p-6">
-      <h1 class="text-3xl font-bold mb-6">Main Content Area</h1>
-      <p class="mb-4">This is the main content area. You can add your content here.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt. Duis a quam nec dui luctus commodo. Proin ac metus diam. Sed id dolor consectetur, commodo odio at, faucibus felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-    </div>
+  </header>
+  <div id="main" class="h-[calc(100%-3rem)] flex flex-row justify-around">
+    <!-- <div id="app" class="py-3 bg-stone-50 border-gray-300 border-2 w-50 h-100 flex flex-col items-center justify-center">
+      <img src="src/images/headphones.jpg" alt="Product Image" class="w-10/12 h-50 object-center mb-4 overflow-hidden object-cover rounded-xl">
+      <div class="flex-grow pl-3">
+        <p id="product-name" class="mb-4">Sound-proof Bluetooth Headphones</p>
+        <p data-price-value="19.99" class="mb-4 text-lg font-bold" id="product-price">$19.99</p>
+        <select class="quantitySelect mb-4 px-2 py-1 rounded-lg bg-gray-200"></select>
+      </div>
+      <button onclick="add_to_cart()" class="bg-yellow-500 items-center hover:bg-yellow-600 text-white font-bold py-2 px-4 rounded-full">Add to Cart</button>
+    </div> -->
   </div>
+  
 </body>
 </html>
