--- a/index.html
+++ b/index.html
@@ -4,27 +4,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dynamic Cart Page</title>
+  <title>Amazon-Mockup</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="./src/scripts/app.js" type="module" defer></script>
+  <script src="/src/scripts/app.js" type="module" defer></script>
 </head>
 <body class="bg-gray-100 min-h-screen">
-  <!-- Header -->
-  <header class="bg-indigo-950 h-12 flex items-center px-3">
-    <i class="fa fa-amazon text-4xl text-white"></i>
-    <h1 class="text-2xl font-bold text-white ml-2">Amazon</h1>
-    <div class="flex-1 flex justify-center">
-      <input type="text" id="search-bar" placeholder="Search products..." class="w-1/4 p-1 rounded" />
-    </div>
-    <div class="ml-auto flex items-center">
-      <i class="fa fa-shopping-cart text-2xl text-white"></i>
-      <span class="ml-2 text-gray-200" id="cart-count">0 items</span>
-      <span class="ml-2 text-gray-200" id="cart-total">$0.00</span>
-    </div>
-  </header>
-
-  <!-- Product Container -->
-<div id="product-container1" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-9 gap-4 p-4"></div>
-<div id="product-container2" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-9 gap-4 p-4"></div>
+  <header id="header"></header>
+  <div id="product-container1" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-4 p-4 border-b-4 border-gray-400"></div>
+  <div id="product-container2" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-4 p-4"></div>
 </body>
 </html>
