--- a/src/html/cart.html
+++ b/src/html/cart.html
@@ -7,12 +7,13 @@
   <title>Amazon-Mockup</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="/src/scripts/cart.js" type="module" defer></script>
+  <link rel="stylesheet" href="/src/styles/style.css" />
 </head>
-<body class="bg-gray-100 min-h-screen">
+<body class="bg-stone-200 min-h-screen">
   <header id="header"></header>
 <main id="cartPage" class="grid grid-cols-12 w-full">
-    <div id="cart-container" class="col-span-10 bg-stone-200"></div>
-    <div id="cart-summary" class="col-span-2 h-48 bg-indigo-700 fixed right-0">
+    <div id="cart-container" class="col-span-10 bg-white rounded-lg"></div>
+    <div id="cart-summary" class="col-span-2 h-48 bg-white fixed right-0 rounded-xl">
         <span>Subtotal</span>
     </div>
 </main>
